--- a/src/style.css
+++ b/src/style.css
@@ -222,9 +222,9 @@
     position: absolute;
     width: 3rem;
     height: 3rem;
-    background: transparent;
-    color: white;
-    font-size: 3rem;
+    background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 64 64" fill="white" xmlns="http://www.w3.org/2000/svg"><path d="M2 34c8-8 20-8 30 0 10-8 22-8 30 0" stroke="white" stroke-width="4" fill="none" stroke-linecap="round"/></svg>');
+    background-size: contain;
+    background-repeat: no-repeat;
     opacity: 0.5;
     animation: fly 12s linear infinite;
   }
@@ -239,6 +239,12 @@
     top: 20%;
     left: -20%;
     animation-delay: 4s;
+  }
+
+  .seagull-3 {
+    top: 25%;
+    left: -30%;
+    animation-delay: 8s;
   }
   
   @keyframes fly {
